--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -77,8 +77,8 @@ spec:
       owner: app
 
   storage:
-    size: 1Gi
-    storageClass: local-path
+    size: 2Gi
+    storageClass: longhorn
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
