--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -76,9 +76,57 @@ spec:
       database: app
       owner: app
 
+  monitoring:
+    enablePodMonitor: true
+    customQueriesConfigMap:
+      - name: owntracks-monitoring-sql
+        key: custom-queries
+
+  backup:
+    barmanObjectStore:
+      destinationPath: "s3://psql"
+      endpointURL: "https://backup.t6t6.fra.idrivee2-53.com"
+      s3Credentials:
+        accessKeyId:
+          name: idrive-creds
+          key: ACCESS_KEY_ID
+        secretAccessKey:
+          name: idrive-creds
+          key: ACCESS_SECRET_KEY
+      tags:
+        app: "owntracks"
+    retentionPolicy: "7d"
+
   storage:
     size: 2Gi
     storageClass: longhorn
+---
+apiVersion: postgresql.cnpg.io/v1
+kind: ScheduledBackup
+metadata:
+  name: owntracks-backup
+  namespace: apps
+spec:
+  schedule: "0 0 0 * * *"
+  backupOwnerReference: self
+  cluster:
+    name: owntracks
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: owntracks-monitoring-sql
+  namespace: apps
+  labels:
+    cnpg.io/reload: ""
+data:
+  custom-queries: |
+    users:
+      query: SELECT COUNT(*) FROM (SELECT DISTINCT username FROM locations) AS users;
+      metrics:
+        - users:
+            usage: "Owntracks users"
+            usage: "GAUGE"
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -101,6 +149,8 @@ kind: Service
 metadata:
   name: owntracks
   namespace: apps
+  labels:
+    app: owntracks
 spec:
   selector:
     app: owntracks
@@ -109,3 +159,23 @@ spec:
       port: 8080
       targetPort: 8080
   type: ClusterIP
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: owntracks-servicemonitor
+  namespace: monitoring
+  labels:
+    release: monitoring
+spec:
+  endpoints:
+    - interval: 30s
+      port: http
+      path: /metrics
+      scheme: http
+  selector:
+    matchLabels:
+      app: "owntracks"
+  namespaceSelector:
+    matchNames:
+      - apps
